[gd_scene load_steps=1 format=3 uid="uid://skillspanel"]

[ext_resource type="Script" path="res://scenes/SkillsPanel.gd" id="1"]

[node name="SkillsPanel" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 1)

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.07, 1)

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SkillsHeader" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillsTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/SkillsHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skills"

[node name="CloseSkillsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/SkillsHeader"]
layout_mode = 2
text = "Close"

[node name="SkillsList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
item_count = 0
